--- a/templates/_parties/_nav.html.twig
+++ b/templates/_parties/_nav.html.twig
@@ -22,7 +22,7 @@
 						<a class="dropdown-item" href="/souscategorie/12">PERRUQUE SANS COLLE</a>
 					</div>
 				</li> #}
-				<li class="nav-item dropdown">
+				{# <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">TISSAGES BRÉSILIEN</a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="/souscategorie/13">PACK 3 BUNDLE</a>
@@ -38,7 +38,7 @@
 						<a class="dropdown-item" href="/souscategorie/4">BONNETS</a>
 						<a class="dropdown-item" href="/souscategorie/5">COLORATION</a>
 						<a class="dropdown-item" href="/souscategorie/6">LISSEUR CHAUFFANT</a>
-					</li>
+					</li> #}
 						
 						
 						{% if app.user %}
